[package]
name = "secretd"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
rand = "0.8"
dialoguer = "0.11"
rpassword = "7"
